feat: criar crud de grupos de cobertura da ata
