# src/modules/atas/atas.routes.ts
@@ -1,6 +1,7 @@
 import { Router } from "express";
 import { authMiddleware } from "../../middlewares/auth.middleware.js";
 import { requirePermission } from "../../middlewares/permission.middleware.js";
+import { requireRole } from "../../middlewares/role.middleware.js";
 import { AtaItemsController } from "../ata-items/ata-items.controller.js";
 import { AtasController } from "./atas.controller.js";
 
@@ -15,6 +16,25 @@ atasRoutes.post("/", requirePermission("atas.manage"), (req, res) =>
 );
 atasRoutes.get("/", (req, res) => controller.list(req, res));
 atasRoutes.get("/code/:code", (req, res) => controller.findByCode(req, res));
+
+atasRoutes.post(
+  "/:id/coverage-groups",
+  requireRole("ADMIN"),
+  requirePermission("atas.manage"),
+  (req, res) => controller.createCoverageGroup(req, res)
+);
+atasRoutes.patch(
+  "/:id/coverage-groups/:groupId",
+  requireRole("ADMIN"),
+  requirePermission("atas.manage"),
+  (req, res) => controller.updateCoverageGroup(req, res)
+);
+atasRoutes.delete(
+  "/:id/coverage-groups/:groupId",
+  requireRole("ADMIN"),
+  requirePermission("atas.manage"),
+  (req, res) => controller.removeCoverageGroup(req, res)
+);
 
 atasRoutes.post("/:id/items", requirePermission("atas.manage"), (req, res) =>
   ataItemsController.create(req, res)
